--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-# https://github.com/github/gitignore/blob/main/Sass.gitignore
+# Created by https://www.toptal.com/developers/gitignore/api/sass
+# Edit at https://www.toptal.com/developers/gitignore?templates=sass
+
+### Sass ###
 .sass-cache/
 *.css.map
 *.sass.map
 *.scss.map
+
+# End of https://www.toptal.com/developers/gitignore/api/sass
