--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "repository": "https://github.com/MeShootIn/html-css-basics-MeShootIn.git",
   "author": "MeShootIn <dmitriimishutin@gmail.com>",
-  "license": "GPL-3.0"
+  "license": "GPL-3.0",
+  "devDependencies": {
+    "prettier": "2.7.1"
+  }
 }
