--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "MeShootIn <dmitriimishutin@gmail.com>",
   "license": "GPL-3.0",
   "devDependencies": {
-    "prettier": "2.8.0"
+    "prettier": "2.8.0",
+    "sass": "^1.56.1"
   }
 }
