--- a/.gitignore
+++ b/.gitignore
@@ -159,10 +159,10 @@ dist
 
 # if you are NOT using Zero-installs, then:
 # comment the following lines
-!.yarn/cache
+# !.yarn/cache
 
 # and uncomment the following lines
-# .pnp.*
+.pnp.*
 
 # End of https://www.toptal.com/developers/gitignore/api/sass,yarn,node
 
