--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "MeShootIn <dmitriimishutin@gmail.com>",
   "license": "GPL-3.0",
   "devDependencies": {
+    "editorconfig-checker": "^5.0.1",
     "live-server": "^1.2.2",
     "prettier": "2.8.3",
     "sass": "^1.56.1"
